Joda-Time version 1.4
---------------------

Joda-Time is a date and time handling library that seeks to replace the JDK
Date and Calendar classes.

This is the fifth full release of Joda-Time.
This release focuses on new features, but also include some bug fixes.

We recommend JDK 1.3 or later, and have performed no testing on earlier JDKs.

Joda-Time is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

** Please also check out the JSP, Hibernate and I18N contributed projects **


Enhancements since 1.3
----------------------


Compatibility with 1.3
----------------------
Binary compatible - Yes

Source compatible - Yes

Serialization compatible - Yes

Data compatible - Yes
  - DateTimeZone data updated to version 2006m

Semantic compatible - Yes


Deprecations since 1.3
----------------------


Bug fixes since 1.3
-------------------
- GJChronology
  Text value of ReadablePartial fields was always a decimal number.


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team